Fix overflow bug in the curl generator (#759)

--- a/src/components/codeWrapper/CodeWrapper.scss
+++ b/src/components/codeWrapper/CodeWrapper.scss
@@ -5,4 +5,8 @@
     margin: 0;
     overflow: visible;
   }
+
+  code {
+    overflow: auto;
+  }
 }
